# gridshib-ca

./: .project  ChangeLog  ChangeLog.about  HOWTO-BugfixRelease  HOWTO-Release  INSTALL  INSTALL.config  LICENSE  Makefile.in  README.BuildingJava  README.md  README.txt  aclocal.m4  authorizedIdps.conf.in  authorizedPortals.conf.in  bootstrap.sh  build.xml  configure.ac  createTrustStore.sh  gridshib-ca.conf.in  todo.txt
buildbot/: gridshib-buildbot.cfg  gridshib-ca-buildbot.cfg  gridshib-ca-test.sh  install-buildbot-config.sh
certificates/: 85ca9edc.0  README  aa99c057.0
conf/: authorizedIdps.conf.in  gridshib-ca.conf  gridshib-ca.conf.in  policy.conf  policy.conf.in
dev-utils/: Makefile-inc.in  build-test.sh.in  clean-pod2html.sh.in  make-release.pl.in  tag-version.pl.in
doc/: .htaccess  callouts.html.in  changelog.html.in  changelog.xml.in  faq.html.in  faq.xml.in  footer.html  gridshib-ca-cert.tar  gridshib-ca-doc-images.graffle  gridshib-ca-process-flow.graffle  header.html  https-cas.html.in  https-cas.xml.in  index.html.in  index.xml.in  install.html.in  install.xml.in  introduction.xml.in  license.html.in  license.xml.in  modules.html.in  myproxy-ca.html.in  myproxy-ca.xml.in  perl-modules.xml.in  portal-delegation.graffle  portal-delegation.html.in  portal-delegation.xml.in  process-flow.html.in  process-flow.xml.in  readme.xml.in  saml-issuer.html.in  saml-tools.xml.in  test-deployment.xml.in
doc/admin/: gridshib-ca-process-flow.graffle  https-cas.xml.in  index.xml.in  install.xml.in  myproxy-ca.xml.in  perl-modules.xml.in  portal-delegation.xml.in  process-flow.xml.in  saml-tools.xml.in
doc/perl/: header.html
edu/ncsa/gridshib/gridshibca/: CredentialRetriever.java  GUI.java  GridShibCATester.java  PEM.java  UMask.java  UMaskException.java  Version.in
java/: README.txt
java/GridShibCAClient/: build.xml  gsca-build.xml  gsca.properties.in  icons.graffle  proguard-mac.conf  proguard.conf  run-findbugs.sh.in
java/GridShibCAClient/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
java/GridShibCAClient/nbproject/configs/: JWS_generated.properties
java/GridShibCAClient/nbproject/private/: private.properties
java/GridShibCAClient/nbproject/private/configs/: JWS_generated.properties
java/GridShibCAClient/resources/: README.txt  keystore  properties.in
java/GridShibCAClient/src/edu/ncsa/gridshib/gridshibca/: BrowserInterface.java  Credential.java  CredentialInfoFrame.form  CredentialInfoFrame.java  DebugFrame.form  DebugFrame.java  ErrorDialog.form  ErrorDialog.java  GridShibCAClientAboutBox.form  GridShibCAClientAboutBox.java  GridShibCAClientApp.java  GridShibCAClientLogger.java  GridShibCAClientView.form  GridShibCAClientView.java  GridShibCACredentialIssuerURL.java  GridShibCACredentialRetriever.java  GridShibCAProperties.java  GridShibCATrustRootsURL.java  GridShibCATrustStore.java  GridShibCAURL.java  PEMEncoder.java  PassphraseDialog.form  PassphraseDialog.java  Resource.java
java/GridShibCAClient/src/edu/ncsa/gridshib/gridshibca/resources/: CredentialInfoFrame.properties  DebugFrame.properties  ErrorDialog.properties  GridShibCAClientAboutBox.properties  GridShibCAClientApp.properties  GridShibCAClientView.properties  PassphraseDialog.properties
java/GridShibCAClient/src/org/globus/util/: ConfigUtil.java  README  Util.java.diff
java/GridShibCAClient/trusted-https-certs/: 219d9499.0  7ecb24b4.0  cc42c00d.0
nmi/: README  gridshib-ca-cmdfile.in  gridshib-ca-nmitest.sh  gridshib-ca.ftp.in
openssl-ca/: Makefile.in  README  apps.c  apps.h  openssl-ca-test.sh.in  openssl-ca.c
org/globus/util/: README  Util.java
perl/: POD-HowTO.txt
perl/Globus/: Config.pm  GSICredential.pm  GSISocket.pm  MyProxyClient.pm  README
perl/GridShibCA/: Authorization.pm.in  CA.pm.in  CGISession.pm.in  CGIinterface.pm.in  CSRF.pm.in  CertRegistry.pm.in  Command.pm.in  Config.pm.in  Constants.pm.in  Debug.pm.in  DisplayTemplate.pm.in  DumpSession.pm.in  ErrorHandler.pm.in  Exception.pm.in  FakeShib.pm.in  FakeSignOn.pm.in  HTMLError.pm.in  HTMLTemplate.pm.in  IssueCert.pm.in  JNLPForm.pm.in  LaunchClient.pm.in  LaunchJNLP.pm.in  Logger.pm.in  Login.pm.in  Logon.pm.in  Logout.pm.in  MyProxyCA.pm.in  MyProxyCACILogon.pm.in  NameMapper.pm.in  OpenId.pm.in  OpenIdLogon.pm.in  OpenIdSignOn.pm.in  OpenSSLCA.pm.in  OutputHandler.pm.in  PHPSession.pm.in  PHPSessionMySQL.pm.in  Policy.pm.in  PythonClient.pm.in  Request.pm.in  SAMLExtension.pm.in  (+15 more)
perl/GridShibCA/test/: CGISessionTest.pm  CSRFTest.pm  CommandTest.pm  ConfigTest.pm  ExceptionTest.pm  FakeSignOnTest.pm  HTMLTemplateTest.pm  LoggerTest.pm  PostInstallTestSuite.pm  ShibLogonTest.pm  ShibSignOnTest.pm  Suite.pm  UnitTestSuite.pm  UserIdentityTest.pm
python/: gridshibca-client.py.in
templates/: CredentialRetriever.jnlp  GSCA.jnlp  debug.html  dump.html  error.html  jnlp-launch-form.html  jnlp-launch.html  login.html  logout.html  openid-cancel.html  openid-logon-form.html  python.html  session-expired.html  session-missing.html
test/: TestRunner.pl  password  test-cert.pem  test-cred.sh.in  test-dist.sh.in  test-key.pem  test.pkcs12
utils/: CA.pm.in  CGIinterface.pm.in  Command.pm.in  Logger.pm.in  OpenSSLCA.pm.in  ca-myproxy.pl.in  ca-openssl.pl.in  check-config.pl.in  config.pl.in  create-ca.pl  create-openid-consumer-secret.pl  create-openid-consumer-secret.pl.in  create-openssl-ca.pl.in  issue-cert.pl.in  mapper.sh.in  myproxy-mapapp.pl.in  tag-version.pl.in
webapps/: GridShibCA.cgi.in  GridShibCALogin.cgi.in  launchGSCA.jnlp.in  login.cgi.in  openid.cgi.in  shib.cgi.in  shibLaunchGSCA.jnlp.in
webdocs/: CredentialRetriever.jnlp  CredentialRetriever.jnlp.in  GridShibCA.css.in  GridShibCATester.jnlp.in  checkPrerequisites.html.in  create-jnlp.in  faq.html.in  footer.html.in  generateCred.cgi  generateCred.cgi.in  generateCred.html.in  getTrustedCAs.cgi.in  gridshib-ca-demo-portal.cgi.in  header.html.in  index.html.in  launchGSCA.jnlp.in  login  login.cgi.in  login.html.in  login.in  portalLogin.cgi.in  sysinfo.pl.in  test.pl.in  welcome.pl.in
